--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body{
     margin:0px 0px;
     padding: 0px 0px;
-    background-image: url(pexels-ella-olsson-572949-1640773.jpg);
-    background-size:120%;
+    background-image: url(png/pexels-ella-olsson-572949-1640773.jpg);
+    background-size:cover;
+    background-position: center;
     background-repeat: no-repeat;
+    overflow: hidden;
+    height: 100vh;
 }
 
 header {
@@ -84,24 +87,51 @@ header {
 }
 
 .main {
-    width: auto;
-    height: auto;
+    overflow-y:visible;
+    overflow-x: hidden;
+    width: 90%;
+    height: 90%;
     opacity: 85%;
     margin: 0px 100px; /* Adjust margin as needed */
     padding: 0px 0;
     flex-grow: 1; /* Keep this to allow it to fill available space */
-    min-height: 100vh; /* Set a minimum height if desired */
+}
+
+.main::-webkit-scrollbar {
+    /*display: none;*/
 }
 
 .main article {
     text-align: center;
     font-size: 90%;
-    padding: 10px;
-    /*background-color: blue;*/
-    margin: 0%;
+    padding: 1% 1%;
+    /*background-color: blue; */
+    margin: 1px;
+    margin-top: 1%;
     width: 100%;
+    height: 100%;
+} 
+
+aside h2 {
+    margin: 8%;
 }
 
+
+#addpage {
+    padding: 5% 20%; /* Increases padding for larger buttons */
+    font-size: 18px; /* Increases font size */
+    font-size: 200%;
+    border: none; /* Removes default border */
+    border-radius: 8px; /* Adds rounded corners */
+    background-color: white; /* Button color */
+    border: 1px solid #ccc; /* Light border */
+    cursor: pointer; /* Changes cursor to pointer on hover */
+    transition: background-color 0.3s; /* Smooth transition for hover effect */
+}
+
+#addpage:hover {
+    transform: scale(1.03);
+}
 
 /* from js*/
 
@@ -115,6 +145,7 @@ header {
     gap: 20px; /* Space between items */
     text-align: center;
     justify-content: left; /* Center items horizontally */
+    height: 90%;
 
 }
 
@@ -153,6 +184,6 @@ header {
 @media (orientation:portrait) {body{
     margin:0 0;
     padding: 0 0;
-    background-image: url(vertical.jpg);
+    background-image: url(png/vertical.jpg);
     background-size:120%;
 }}
